--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<h1>Pagina principal</h1>
+	<h1>Pagina principal - Contactenos</h1>
     <script src="js/script.js"></script>
 </body>
 
