--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contactenos</h2>
-          <p>Si tienes algun problema o queja, o si deseas cotizar la realizacion de algun trabajo, comunicate con nosotros !. Enviar un mensaje es totalmente gratis y te atenderemos con la mejor atencion posible y lo mas pronto posible.</p>
+          <h2>Contáctenos</h2>
+          <p>Si tienes algun problema o queja, o si deseas cotizar la realizacion de algun trabajo, comunicate con nosotros! Enviar un mensaje es totalmente gratis y te atenderemos con la mejor atencion posible y lo mas pronto posible.</p>
         </div>
 
         <div class="row">
@@ -260,12 +260,12 @@
             <div class="info">
               <div>
                 <i class="icofont-google-map"></i>
-                <p>Cl. 58 ##55 - 66<br>Barranquilla, Atlántico</p>
+                <p>Cl. 58 #55 - 66<br>Barranquilla, Atlántico</p>
               </div>
 
               <div>
                 <i class="icofont-envelope"></i>
-                <p>Amoeba@gmail.com</p>
+                <p>amoeba@gmail.com</p>
               </div>
 
               <div>
