--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           </div>
 
           <div class="col-lg-5 col-md-12">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="backend/enviar.php" method="post" role="form" class="php-email-form">
               <div class="form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" data-rule="minlen:4" data-msg="Ingrese al menos 4 caracteres" />
                 <div class="validate"></div>
