--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 <div class="validate"></div>
               </div>
               <div class="mb-3">
-                <div class="loading">Cargando</div>
+                <div class="loading">Cargando...</div>
                 <div class="error-message"></div>
                 <div class="sent-message">Tu mensaje ha sido enviado. ¡Gracias!</div>
               </div>
